2008-09-16  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.configValues): Improved test to cover
	getUserStatsLookup()

	* pokernetwork/pokerservice.py (PokerService.getUserStatsLookup):
	Wrote method.

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.test00_6_configValues): Wrote test.
	(PokerServiceTestCase.test00_7_configValues): Wrote test.
	(PokerServiceTestCase.test00_8_configValues): Wrote test.
	(PokerServiceTestCase.configValues): Added stats support.

	* pokernetwork/userstats.py (UserStatsFactory.getStatsClass):
	Switched to return the default lookup object when nothing found.

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.test13_checkTourneysSchedule_spawn_regular):
	Added update to set respawn to 'y' for 'regular1' tourney.

2008-09-15  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerservice.py (PokerService.tourneyDestroyGame):
	Adjusted so reactor.callLater() is not used for waits <= 0.
	(PokerService.tourneyNewState): Adjusted so reactor.callLater() is
	not used for waits <= 0.


	* pokernetwork/userstats.py (UserStatsLookup.allStatsAsPacket):
	Wrote method.
	(UserStatsLookup.getSupportedListAsPacket): Wrote method.

	* tests/test-protocol.py.in
	(UGAMEProtocolTestCase.testHandleData): Added three new packets
	per below.

	* pokernetwork/pokerpackets.py (PacketPokerPlayerStats): Created packet.
	(PacketPokerGetStatsSupported): Created packet.
	(PacketPokerStatsSupported): Created packet.

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test04_userStatsLookupBaseClass): Wrote test.
	(PokerUserStatsTestCase.test05_userStatsRankPercentileLookupBaseClass):
	Wrote test.
	(PokerUserStatsTestCase.test03_rankPercentileAccessor): Fixed bug
	with assertions related to sort.

	* pokernetwork/userstats.py (UserStatsAccessor.error): Added method.
	(UserStatsAccessor.getStatsValue): Restored strangely deleted method.
	(UserStatsAccessor._lookupValidStat): Restored strangely deleted method.